--- a/style_ch.css
+++ b/style_ch.css
@@ -138,10 +138,17 @@ p {
 }
 
 .about-content img {
-    width: 700px;
+    width: 453px;
     transform: scaleX(-1);
+    height : 400px;
+    border : 1px solid;
+    border-radius : 50%;
+    
 }
-
+.flex3 {
+    flex: 3;
+    padding-left : 150px;
+}
 .about-content ul {
     margin-top: 25px;
     margin-bottom: 10px;
